# cloudtalk

./: README.md
android/: README.md  build.gradle  settings.gradle
android/BQMM_Lib/: AndroidManifest.xml  build.gradle
android/BQMM_Lib/res/menu/: main.xml
android/BQMM_Lib/res/values/: attrs.xml  dimens.xml  strings.xml  styles.xml
android/IMLib/: build.gradle
android/IMLib/src/main/: AndroidManifest.xml
android/IMLib/src/main/java/com/zhangwuji/im/: Security.java
android/IMLib/src/main/java/com/zhangwuji/im/DB/: DBInterface.java
android/IMLib/src/main/java/com/zhangwuji/im/config/: DBConstant.java  HandlerConstant.java  IntentConstant.java  MessageConstant.java  SysConstant.java
android/IMLib/src/main/java/com/zhangwuji/im/imcore/: SocketThread.java
android/IMLib/src/main/java/com/zhangwuji/im/protobuf/: IMBaseDefine.java  IMBuddy.java  IMFile.java  IMGroup.java  IMLogin.java  IMMessage.java  IMOther.java  IMServer.java  IMSwitchService.java
android/IMLib/src/main/java/com/zhangwuji/tools/: EncryptTools.java  FileIOTools.java  MGAutoUpdate.java  MGJNotify.java  ScreenTools.java  StringTools.java  SysInfo.java  TimeTools.java
android/IMLib/src/main/res/values/: strings.xml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/zhangwuji/im/: UrlConstant.java
android/app/src/main/jni/: Application.mk  speex_jni.cpp
android/app/src/main/res/anim/: in_righttoleft.xml  out_lefttoright.xml
android/app/src/main/res/drawable/: rc_voip_vedio_answer_selector.xml  textview_corner.xml
android/app/src/main/res/layout/: activity_amap.xml  activity_nearbypeople.xml  activity_nearbypeople_detail.xml  activity_new_friendlist.xml  activity_register.xml  activity_video_chat_view.xml  fr_group_list.xml  fragment_discover.xml  group_item_new.xml  item_contact_list_header.xml  list_more_item.xml  nearbypeople_item.xml  rc_ext_plugin_grid_view.xml  rc_ext_plugin_item.xml  rc_ext_plugin_pager.xml  rc_voip_activity_select_member.xml  rc_voip_activity_single_call.xml  rc_voip_audio_call_user_info.xml  rc_voip_call_bottom_connected_button_layout.xml  rc_voip_call_bottom_incoming_button_layout.xml  rc_voip_contact_container.xml  rc_voip_float_box.xml  rc_voip_item_incoming_maudio.xml  rc_voip_item_outgoing_maudio.xml  rc_voip_listitem_select_member.xml  rc_voip_multi_video_call.xml  rc_voip_multi_video_calling_bottom_view.xml  rc_voip_multi_video_top_view.xml  rc_voip_user_info.xml  rc_voip_user_portrait.xml  rc_voip_video_call_user_info.xml  rc_voip_viewlet_remote_user.xml  rs_ada_user_ship.xml  tt_activity_base.xml  tt_activity_detail_portrait.xml  tt_activity_group_member_select.xml  tt_activity_groupmanage.xml  tt_activity_login.xml  tt_activity_main.xml  tt_activity_message.xml  (+35 more)
android/app/src/main/res/values/: attrs.xml  rc_voipkit_color.xml  rc_voipkit_string.xml  rc_voipkit_style.xml  theme.xml  tt_color.xml  tt_dimens.xml  tt_strings.xml  tt_strings_activity_contact.xml  tt_strings_activity_message.xml  tt_styles.xml
business/: 说明.md
database/: newim.sql
doc/: README.md  RELEASE.md  http接口定义.md
ios/: README.md
pb/: IM.BaseDefine.proto  IM.Buddy.proto  IM.File.proto  IM.Group.proto  IM.Login.proto  IM.Message.proto  IM.Other.proto  IM.Server.proto  IM.SwitchService.proto  create.sh
server/src/: CMakeLists.txt  build.sh  make_log4cxx.sh  make_mariadb.sh  make_protobuf.sh  restart2.sh  sync_lib.sh  sync_lib_for_zip.sh
server/src/base/: Base.cbp  CMakeLists.txt  Makefile  cmake_install.cmake  version.h
server/src/base/pb/google/protobuf/: repeated_field.h
server/src/base/pb/protocol/: IM.BaseDefine.pb.cc  IM.BaseDefine.pb.h  IM.Buddy.pb.cc  IM.Buddy.pb.h  IM.File.pb.cc  IM.File.pb.h  IM.Group.pb.cc  IM.Group.pb.h  IM.Login.pb.cc  IM.Login.pb.h  IM.Message.pb.cc  IM.Message.pb.h  IM.Other.pb.cc  IM.Other.pb.h  IM.Server.pb.cc  IM.Server.pb.h  IM.SwitchService.pb.cc  IM.SwitchService.pb.h
server/src/db_proxy_server/: .cproject  .project  CMakeLists.txt  HandlerMap.cpp  Makefile  ProxyConn.cpp  ProxyConn.h  SyncCenter.cpp  cmake_install.cmake  db_proxy_server.cbp  db_proxy_server.cpp  dbproxyserver.conf  server.pid
server/src/db_proxy_server/business/: AudioModel.cpp  DepartAction.cpp  DepartModel.cpp  DepartModel.h  FileModel.cpp  GroupMessageModel.cpp  GroupModel.cpp  GroupModel.h  InterLogin.cpp  Login.cpp  MessageContent.cpp  MessageCounter.cpp  MessageModel.cpp  MessageModel.h  RelationModel.cpp  SessionModel.cpp  UserAction.cpp  UserModel.cpp  UserModel.h
server/src/file_server/: Makefile  cmake_install.cmake  file_server.cpp  fileserver.cbp  fileserver.conf
server/src/http_msg_server/: CMakeCache.txt  CMakeLists.txt  DBServConn.cpp  DBServConn.h  HttpConn.cpp  HttpQuery.cpp  HttpQuery.h  ImUser.cpp  Makefile  RouteServConn.cpp  RouteServConn.h  WebSocketServConn.cpp  WebSocketServConn.h  cmake_install.cmake  http_msg_server.cbp  http_msg_server.cpp  httpmsgserver.conf
server/src/libsecurity/android/jni/: security.cpp
server/src/libsecurity/ios/security.xcodeproj/project.xcworkspace/xcuserdata/jackkim.xcuserdatad/: UserInterfaceState.xcuserstate
server/src/libsecurity/ios/security.xcodeproj/xcuserdata/jackkim.xcuserdatad/xcschemes/: xcschememanagement.plist
server/src/libsecurity/src/: security.cpp
server/src/libsecurity/win/: build.bat
server/src/log4cxx/lib/: liblog4cxx.la
server/src/log4cxx/lib/pkgconfig/: liblog4cxx.pc
server/src/msfs/: Makefile  cmake_install.cmake  msfs  msfs.cbp
server/src/msg_server/: DBServConn.cpp  DBServConn.h  FileServConn.cpp  GroupChat.cpp  ImUser.cpp  ImUser.h  Makefile  MsgConn.cpp  RouteServConn.cpp  cmake_install.cmake  msg_server.cpp  msgserver.cbp  msgserver.conf
server/src/push_server/: Makefile  cmake_install.cmake  pushserver.cbp
server/src/route_server/: Makefile  cmake_install.cmake  routeserver.cbp
server/src/slog/: CMakeLists.txt  Makefile  cmake_install.cmake
server/src/slog/include/log4cxx/private/: log4cxx_private.h
server/src/tools/: daeml
web/: README.md
(+240 files in other folders)
